# pytigon-standard-prj

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
prj/_schall/: install.ini
prj/_schbi/: settings_app.py
prj/_schremote/: install.ini
prj/_schsetup/: install.ini
prj/_schtest/: install.ini
prj/_schtools/: settings_app.py
prj/_schwiki/: install.ini
prj/mobile_demo/: install.ini
prj/schmanage/: install.ini
pytigon_standard_prj/: make.sh
pytigon_standard_prj/prj/_schall/: install.ini  settings_app.py  translate.py
pytigon_standard_prj/prj/_schbi/: install.ini  settings_app.py
pytigon_standard_prj/prj/_schbusiness/: apps.py  install.ini  settings_app.py
pytigon_standard_prj/prj/_schcomponents/: install.ini  settings_app.py
pytigon_standard_prj/prj/_schdata/: install.ini  settings_app.py
pytigon_standard_prj/prj/_schplaywright/: install.ini  settings_app.py
pytigon_standard_prj/prj/_schremote/: install.ini  settings_app.py
pytigon_standard_prj/prj/_schserverless/: install.ini  settings_app.py
pytigon_standard_prj/prj/_schsetup/: install.ini  settings_app.py
pytigon_standard_prj/prj/_schtest/: asgi.py  install.ini  settings_app.py
pytigon_standard_prj/prj/_schtools/: apps.py  install.ini  settings_app.py
pytigon_standard_prj/prj/_schwiki/: apps.py  install.ini  settings_app.py
pytigon_standard_prj/prj/in_browser_demo/: install.ini  settings_app.py
pytigon_standard_prj/prj/mobile_demo/: install.ini  settings_app.py
pytigon_standard_prj/prj/schdevtools/: install.ini  schdevtools.prj  schdevtools.ptigprj  settings_app.py  (+2 more)
(+508 files in other folders)
