[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytigon-standard-prj"
version = "0.260721"
description = "Pytigon - standard projects for pytigon"
authors = [
    { name = "Sławomir Chołaj", email = "slawomir.cholaj@gmail.com" },
]
license = { text = "LGPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.hatch.build.targets.wheel]
packages = ["pytigon_standard_prj"]

[project.urls]
Homepage = "https://github.com/your-org/pytigon-standard-prj"

[tool.hatch.version]
path = "pytigon_standard_prj/__init__.py"
